swagger fix, image upload by wait group
